Revise order of alternative solutions so only one solution with lambda won't pass